--- a/BlazorMatchGame/Pages/Index.razor
+++ b/BlazorMatchGame/Pages/Index.razor
@@ -20,7 +20,7 @@
     <div class="row">
         @for (int buttonNumber = 1; buttonNumber < 4; buttonNumber++)
         {
-            
+            int level = buttonNumber;
             <button type="button" class="btn btn-secondary">
                 @buttonNumber
             </button>
@@ -31,14 +31,18 @@
         {
             var animal = shuffledAnimals[animalNumber];
             var uniqueDescription = $"Button #{animalNumber}";
+            @*var empty = emptyEmoji[animalNumber];*@
 
 
             <div class="col-3">
 
-                <button @onclick="@(() => ButtonClick(animal, uniqueDescription))"
+                <button @onclick="@(() => ButtonClick(animal, uniqueDescription, animalNumber))"
                         type="button" class="btn btn-outline-dark">
                     @*/*tring to use to animalIconshow to store the showing state, if true, show animal string, else,show empty string, but the button still got information*/*@
                     <h1>@animal</h1>
+
+
+
                 </button>
             </div>
         }
@@ -82,7 +86,37 @@
         "🐻", "🐻",
         "🦊", "🦊",
         "🐯", "🐯",
+        
+  
     };
+
+    // Add different Level to the game
+
+    @*List<string> levelTwo = new List<string>()
+    {
+        "🐭", "🐭",
+        "🐼", "🐼"
+    };
+
+    List<string> levelThree = new List<string>()
+    {
+        "🐭", "🐭",
+        "🐼", "🐼",
+        "🐸", "🐸",
+        "🐮", "🐮"
+    };*@
+
+    @*List<string> emptyEmoji = new List<string>()
+        {
+                "","",
+                "","",
+                "","",
+                "","",
+                "","",
+                "","",
+                "","",
+                "","",
+            };*@
 
     List<string> shuffledAnimals = new List<string>();
     int matchesFound = 0;
@@ -94,7 +128,8 @@
     string bestTimeToDisplay;
     int bestTime = 0;
     bool playButtonShow = false;
-    bool animalIconShow = true;
+    bool animalIconShow = false;
+    int playLevelListLength = 16;
 
     protected override void OnInitialized()
     {
@@ -107,45 +142,86 @@
 
     private void SetUpGame()
     {
-        animalIconShow = true;
-        // Reload new animal list
-        Random random = new Random();
-        shuffledAnimals = animalEmoji
-            .OrderBy(item => random.Next())
-            .ToList();
-
-        // Reset the matches
-        matchesFound = 0;
-
-        // Reset the mistakes
-        mistakes = 0;
-
-        // Reset the timer
-        tenthsOfSecondsElapsed = 0;
-
-        //DRAFT: Try to let the animal icons show 3 secs then disappear
-        //FAIL: It stop the whole game from loading, the game will show up with empty grids.
-        //System.Threading.Thread.Sleep(3000);
-
-    }
-
-    string lastAnimalFound = string.Empty;
-    string lastDescription = string.Empty;
-
-    private void ButtonClick(string animal, string animalDescription)
+        @*emptyEmoji = new List<string>()
+            {
+            "","",
+            "","",
+            "","",
+            "","",
+            "","",
+            "","",
+            "","",
+            "","",
+            };*@
+    animalIconShow = true;
+    // Reload new animal list
+    Random random = new Random();
+    shuffledAnimals = animalEmoji;
+    @*if (playLevelListLength == 16)
     {
-
-        if (lastAnimalFound == string.Empty)
+        shuffledAnimals = animalEmoji;
+    }
+    else if (playLevelListLength == 20)
+    {
+        for (int i=0; i<4; i++)
         {
-            // First selection of the pair. Remember it.
-            lastAnimalFound = animal;
-            lastDescription = animalDescription;
+            shuffledAnimals.Add(levelTwo[i]);
+        }
+    }
+    else if (playLevelListLength == 24)
+    {
+        for (int i = 0; i < 8; i++)
+        {
+            shuffledAnimals.Add(levelThree[i]);
+        }
+    }*@
+
+    shuffledAnimals = shuffledAnimals
+        .OrderBy(item => random.Next())
+        .ToList();
+
+
+    // Reset the matches
+    matchesFound = 0;
+
+    // Reset the mistakes
+    mistakes = 0;
+
+    // Reset the timer
+    tenthsOfSecondsElapsed = 0;
+
+    //DRAFT: Try to let the animal icons show 3 secs then disappear
+    //FAIL: It stop the whole game from loading, the game will show up with empty grids.
+    //System.Threading.Thread.Sleep(3000);
+    //animalIconShow = false;
+
+}
+
+string lastAnimalFound = string.Empty;
+string lastDescription = string.Empty;
+int lastNumber = 0;
+
+private void ButtonClick(string animal, string animalDescription, int number)
+{
+
+    if (lastAnimalFound == string.Empty)
+    {
+        // First selection of the pair. Remember it.
+        lastAnimalFound = animal;
+        lastDescription = animalDescription;
+            @*lastNumber = number;*@
+
+            @*emptyEmoji = emptyEmoji
+                .Select(a => a.Replace(item[number], animal))
+                .ToList();*@
 
             // timer start when click the first button
             timer.Start();
+
         }
         else if ((lastAnimalFound == animal) && (animalDescription != lastDescription))
         {
+
             // Match found! Reset for next pair
             lastAnimalFound = string.Empty;
 
@@ -154,11 +230,13 @@
                 .Select(a => a.Replace(animal, string.Empty))
                 .ToList();
 
+            @*emptyEmoji[number] = animal;*@
+
             // Add number of matches that have been found
             matchesFound++;
 
             // Reload Game if every matches found
-            if (matchesFound == 8)
+            if (matchesFound == (shuffledAnimals.Count)/2)
             {
 
                 if ((bestTime == 0) || (tenthsOfSecondsElapsed <= bestTime))
@@ -175,11 +253,17 @@
         }
         else if ((lastAnimalFound == animal) && (animalDescription == lastDescription))
         {
+            @*emptyEmoji[number] = string.Empty;*@
+
+            // Click on the same button
             lastAnimalFound = animal;
             lastDescription = animalDescription;
         }
         else
         {
+            @*emptyEmoji[lastNumber] = string.Empty;
+                emptyEmoji[number] = string.Empty;*@
+
             // pair don't match, reset selection.
             lastAnimalFound = string.Empty;
             mistakes++;
@@ -204,4 +288,31 @@
         playButtonShow = false;
     }
 
+
+    @*private void LevelButtonClick(int level)
+    {
+        if (level == 1)
+        {
+            playLevelListLength = 16;
+        }
+        else if (level == 2)
+        {
+            playLevelListLength = 20;
+        }
+        else if (level == 3)
+        {
+            playLevelListLength = 24;
+        }
+    }*@
+
+    @*DRAFT*@
+    //1. Add Play Again Button (Done)
+    //2. Fix the bug of clicking same button and count as wrong (Done)
+    //3. Add mistakes counter (Done)
+    //4. Add Best Time Record (Done)
+    //5. Add different levels to this game: easy normal hard
+    //    1) Add choose level button list (done)
+    //    2) Add changing level function
+    //    3) Add new list to hold lists with different level (higher level has more list element)
+    //    4)
 }
